--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 	<div id="game">
         <div id="header">
-            <div class="board" id="mines"><span>00</span></div>
+            <div class="board" id="mines"></div>
             <div class="button" id="reset"></div>
-            <div class="board" id="timer"><span>00:00</span></div>
+            <div class="board" id="timer"></div>
         </div>
         <div id="field">
             <table></table>
