feat(minesweeper): create windows 98 vibes

--- a/index.html
+++ b/index.html
@@ -7,14 +7,29 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
 </head>
 <body>
-	<div id="game">
-        <div id="header">
-            <div class="board" id="mines"></div>
-            <div class="button" id="reset"></div>
-            <div class="board" id="timer"></div>
+    <div class="window">
+        <div class="window-header">
+            <p>Campo Minado</p>
         </div>
-        <div id="field">
-            <table></table>
+        <div class="window-controls">
+            <a href="">Jogo</a>
+            <a href="">Ajuda</a>
+        </div>
+        <div id="game">
+            <div id="header">
+                <div class="board" id="mines"></div>
+                <div class="button" id="reset"></div>
+                <div class="board" id="timer"></div>
+            </div>
+            <div id="field">
+                <table></table>
+            </div>
+        </div>
+    </div>
+    <div id="footer">
+        <div class="button">
+            <img src="./imgs/icons/start-button.png">
+            <span>Iniciar</span>
         </div>
     </div>
 	<script src="./main.js"></script>
