feat(minesweeper): get reset button and menu to work

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
             <p>Campo Minado</p>
         </div>
         <div class="window-controls">
-            <a href="">Jogo</a>
+            <div id="levels">
+                <a href="">Jogo</a>
+                <ul>
+                    <li id="beginner">Iniciante</li>
+                    <li id="intermediate">Intermediário</li>
+                    <li id="advanced">Avançado</li>
+                </ul>
+            </div>
             <a href="">Ajuda</a>
         </div>
         <div id="game">
